force-app/main/default/objects/WeatherAPIConfig__mdt/WeatherAPIConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Open-Meteo Weather API integration. Externalizes all endpoints and parameters so no values are hardcoded in Apex.</description>
    <label>Weather API Config</label>
    <pluralLabel>Weather API Configs</pluralLabel>
</CustomObject>