force-app/main/default/objects/WeatherAPIConfig__mdt/fields/ForecastCurrentParams__c.field-meta.xml
<CustomField>
    <fullName>ForecastCurrentParams__c</fullName>
    <description>Comma-separated list of current weather parameters to request from the Forecast API (e.g. temperature_2m,wind_speed_10m).</description>
    <label>Forecast Current Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>