force-app/main/default/objects/WeatherAPIConfig__mdt/fields/ForecastEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ForecastEndpoint__c</fullName>
    <description>Base URL for the Open-Meteo Forecast API.</description>
    <label>Forecast Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>