force-app/main/default/objects/WeatherAPIConfig__mdt/fields/GeocodingEndpoint__c.field-meta.xml
<CustomField>
    <fullName>GeocodingEndpoint__c</fullName>
    <description>Base URL for the Open-Meteo Geocoding API.</description>
    <label>Geocoding Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>