force-app/main/default/objects/WeatherAPIConfig__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>HTTP request timeout in milliseconds. Salesforce maximum is 120000.</description>
    <label>Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>